cli/tests/snapshot/inputs/errors/string_delimiter_mismatch.ncl
# capture = 'stderr'
# command = []
m%"Hello"%%
